--- a/login.html
+++ b/login.html
@@ -9,7 +9,7 @@
             <nav>
                 
                     <div class="logo">
-                        <a  href="#home" >BIBLIGO<img src="books.jpeg" style="height: 50px; width: 50px;" alt="LMS">LMS</a>
+                        <a  href="#home" ><img src="books.jpeg" style="height: 50px; width: 50px;" alt="LMS">BIBLIGO LMS</a>
                     </div>
                 
                 <ul class="top_margin">
