--- a/lib1.html
+++ b/lib1.html
@@ -12,7 +12,7 @@
         <nav>
             
                 <div class="logo">
-                    <a  href="#home" ><img src="books.jpeg" style="height: 50px; width: 50px;" alt="LMS">BIBLIGO LMS</a>
+                    <a  href="#home" ><img src="books.jpeg" style="height: 50px; width: 50px;" alt="LMS"><tsb></tsb>&emspBIBLIGO LMS</a>
                 </div>
             
             <ul class="top_margin">
