--- a/login.html
+++ b/login.html
@@ -8,9 +8,9 @@
         <header>
             <nav>
                 
-                    <div class="logo">
-                        <a  href="#home" ><img src="books.jpeg" style="height: 50px; width: 50px;" alt="LMS">BIBLIGO LMS</a>
-                    </div>
+<div class="logo">
+                    <a  href="#home" ><img src="books.jpeg" style="height: 50px; width: 50px;" alt="LMS"><tsb></tsb>&emspBIBLIGO LMS</a>
+                </div>
                 
                 <ul class="top_margin">
                     <li><button style="background-color: rgb(50, 171, 251) ;"><a href="#home">Home</a></button></li>
